initial OAuth Swagger setup
