# swagger.json
@@ -9,7 +9,24 @@
   "basePath": "/",
   "schemes": [
     "https"
-  ],
+  ], 
+  "components": {
+    "securitySchemes": {
+      "googleOAuth": {
+        "type": "oauth2", 
+        "description": "Setting up OAuth2 for access through Google & Swagger", 
+        "flows": {
+          "implicit": {
+            "authorizationUrl": "https://accounts.google.com/o/oauth2/auth", 
+            "scopes": {
+              "read": "read entries", 
+              "write": "modify entries"
+            }
+          }
+        }         
+      }
+    }
+  },
   "paths": {
     "/api-docs": {
       "get": {
@@ -190,9 +207,14 @@
     }, 
     "/schedule/": {
       "get": {
-        "description": "",
+        "description": "View all scheduled appointments.",
         "produces": [
           "application/json"
+        ],
+        "security": [
+          {
+            "OAuth2": ["read"]
+          }
         ],
         "responses": {
           "200": {
@@ -207,6 +229,11 @@
         "description": "",
         "produces": [
           "application/json"
+        ],
+        "security": [
+          {
+            "OAuth2": ["read", "write"]
+          }
         ],
         "parameters": [
           {
@@ -244,9 +271,14 @@
     },
     "/schedule/{id}": {
       "get": {
-        "description": "",
+        "description": "Access a specific appointment.",
         "produces": [
           "application/json"
+        ],
+        "security": [
+          {
+            "OAuth2": ["read"]
+          }
         ],
         "parameters": [
           {
@@ -266,7 +298,15 @@
         }
       },
       "put": {
-        "description": "",
+        "description": "Update the details of an appointment",
+        "produces": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "OAuth2": ["read", "write"]
+          }
+        ],
         "parameters": [
           {
             "name": "id",
@@ -306,7 +346,15 @@
         }
       },
       "delete": {
-        "description": "",
+        "description": "Delete an appointment",
+        "produces": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "OAuth2": ["read", "write"]
+          }
+        ],
         "parameters": [
           {
             "name": "id",
